handling the excess text of slug

--- a/src/app/main/products/products.component.html
+++ b/src/app/main/products/products.component.html
@@ -60,7 +60,7 @@
           ></i>
         </div>
         <p>{{ product.price | currency }}</p>
-        <p>{{ product.slug }}</p>
+        <p class="white-space-nowrap overflow-hidden text-overflow-ellipsis">{{ product.slug }}</p>
         <div class="flex justify-content-around">
           <button
             pButton
