--- a/src/app/main/product-form/product-form.component.html
+++ b/src/app/main/product-form/product-form.component.html
@@ -3,7 +3,12 @@
   (ngSubmit)="onSubmit()"
   class="w-12 h-screen flex align-items-center justify-content-center"
 >
-  <div class="flex justify-content-around flex-column heighet w-6">
+  <div
+    class="flex justify-content-around flex-column heighet w-9 md:w-4"
+    [ngStyle]="
+      imagesArray.length > 3 ? { height: '45rem' } : { height: '35rem' }
+    "
+  >
     <app-input
       [control]="getControl('title')"
       label="Title"
