add type button for remove image item, and clear the imageArray when navigate to update product

--- a/src/app/shared/input/input.component.html
+++ b/src/app/shared/input/input.component.html
@@ -42,6 +42,7 @@
         (click)="removeItem($index)"
         icon="pi pi-trash"
         severity="danger"
+        type="button"
         styleClass="custom-icon-color"
       ></button>
       }
