--- a/src/app/shared/dialog/dialog.component.html
+++ b/src/app/shared/dialog/dialog.component.html
@@ -14,7 +14,7 @@
       class="flex md:flex-column flex-row md:w-1 md:h-15rem overflow-y-scroll scrollable-container"
     >
       @for (image of product?.images; track $index) {
-      <div>
+      <div class="w-4 md:w-12">
         <img
           [src]="image"
           class="w-12 cursor-pointer"
@@ -24,11 +24,11 @@
       </div>
       }
     </div>
-    <div>
+    <div class="w-12 md:w-5">
       @if (selectedImage) {
       <img
         [src]="selectedImage"
-        class="w-full h-auto max-h-15rem object-contain transition-linear px-2 bg-contain bg-center bg-no-repeat"
+        class="w-12 h-auto max-h-15rem object-contain transition-linear px-2 bg-contain bg-center bg-no-repeat"
       />
       } @else {
       <div class="flex align-items-center justify-content-center h-15rem">
