--- a/src/app/layout/footer/footer.component.html
+++ b/src/app/layout/footer/footer.component.html
@@ -13,7 +13,7 @@
   </div>
 
   <div>
-    <a routerLink="about" class="text-color no-underline"
+    <a (click)="scrollToTop()" routerLink="about" class="text-color no-underline"
       >&copy; 2025 Ali Al-Guadeb.</a
     >
   </div>
