add target to footer icons

--- a/src/app/layout/footer/footer.component.html
+++ b/src/app/layout/footer/footer.component.html
@@ -5,10 +5,12 @@
     <a
       class="no-underline text-4xl text-color pi pi-linkedin"
       href="https://www.linkedin.com/in/ali-al-guadeb/"
+      target="_blank"
     ></a>
     <a
       class="no-underline text-4xl text-color pi pi-github"
       href="https://github.com/Ali7U"
+      target="_blank"
     ></a>
   </div>
 
