--- a/src/app/main/products/products.component.html
+++ b/src/app/main/products/products.component.html
@@ -95,7 +95,7 @@
     />
   </div>
   <div
-    class="hidden sm:flex flex-column sm:w-3 border-1 h-full py-1 px-3 border-round-xl border-200 sticky custom-top"
+    class="hidden sm:flex flex-column sm:w-3 border-1 h-full py-1 px-3 border-round-xl border-200 sticky custom-top overflow-scroll"
   >
     <h3>Categories:</h3>
     <div class="flex flex-wrap sm:flex-column">
